# lyonheart

./: .gitignore  .rustc_info.json  Cargo.toml  README.md  lyonheart-0.1.0-cp312-cp312-win_amd64.whl  pyproject.toml
benchmarks/: backward.py  ffi.py  memory_peak.py  optimizer.py  pure_forward.py
python/deeplearning_library/: __init__.py  _deeplearning_core.pyi  data.py  optim.py
python/deeplearning_library/data/: __init__.py
python/deeplearning_library/data/datasets/: mnist.py
python/deeplearning_library/datasets/: __init__.py  mnist.py
python/deeplearning_library/losses/: loss.py
python/deeplearning_library/nn/: __init__.py  layers.py  module.py
python/deeplearning_library/optim/: optimizer.py
python/lyonheart/: __init__.py  _lyonheart_core.pyi
python/lyonheart/data/: data.py
python/lyonheart/data/datasets/: intel_dataset.py  mnist.py
python/lyonheart/engine/: __init__.py  metrics.py  trainer.py
python/lyonheart/losses/: __init__.py  loss.py
python/lyonheart/nn/: __init__.py  layers.py  module.py
python/lyonheart/optim/: optimizer.py
python/tests/: demo.py  model.pkl  test.py
src/: gradients.rs  layers.rs  lib.rs  loss.rs  parameter.rs  tensor.rs
