[package]
name = "LyonHeart_Core"
version = "0.1.0"
authors = ["Maxence Vouette"]
description = "A DeepLearning Library in Rust and Python."
repository = "https://github.com/Max89100/Deeplearning_library"
homepage = "https://github.com/Max89100/Deeplearning_library"
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_lyonheart_core"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
burn = { version = "0.19.1", features = ["autodiff", "wgpu"] }
lazy_static = "1.5.0"
numpy = "0.27.1"
pyo3 = "0.27.0"
pyo3-stub-gen = "0.6.0"
